# services/booking/story2/main.go
@@ -32,7 +32,7 @@ func main() {
 	mux := http.NewServeMux()
 
 	mux.HandleFunc("GET /health", sharedhandler.HealthHandler)
-	mux.HandleFunc("GET /info", handler.InfoHandler(config))
+	mux.HandleFunc("GET /info", sharedhandler.InfoHandler(config))
 	mux.HandleFunc("GET /booking/offers", handler.BookingOffersHandler(resolver, httpClient))
 	mux.HandleFunc("GET /openapi", sharedhandler.OpenapiHandler(openapiSpec))
 
